creating dairy features
adding milk and other dairy products to grocery lists

--- a/grocerylist.html
+++ b/grocerylist.html
@@ -1,6 +1,9 @@
 Grocery List:
 <ul>
 	<li>Cereal</li>
+	<li>Milk</li>
 	<li>Juice</li>
 	<li>Chicken</li>
+	<li>Yogurt</li>
+	<li>Cheese</li>
 </ul>
